--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 10px;
   font-family: 'Arial', cursive;
-  background-color: #ecf4f3
+  background-color: white;
 }
 
 h1 {
